--- a/kanopy/templates/kanopy/kanopy_home.html
+++ b/kanopy/templates/kanopy/kanopy_home.html
@@ -30,7 +30,7 @@
                 alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">View map</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">Explore where data were collected and view the photos of the collection.</p>
 
               </div>
             </a>
@@ -41,8 +41,8 @@
                 src="{% static 'img/graph_screenshot6.png' %}" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Explore data</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This card has even longer content than the first to show that equal height action.</p>
+                <p class="card-text">Find our interactive graphics and check out our report summarizing the data from
+                  the project.</p>
 
               </div>
             </a>
