--- a/kanopy/templates/kanopy/kanopy_graph.html
+++ b/kanopy/templates/kanopy/kanopy_graph.html
@@ -287,6 +287,7 @@
             <select id="select_color" class="group-select">
               <option value="county_name" selected>County</option>
               <option value="cover_crop_group1">Cover crop</option>
+              <option value="crop_prior">Cash crop prior</option>
             </select> <br>
           </div>
           <div class="col-md-3" id="x_axis_changer">
@@ -429,7 +430,7 @@
 
     var sdd_margin = { top: 10, right: 25, bottom: 50, left: 50 },
       sdd_width = 300 - sdd_margin.left - sdd_margin.right,
-      sdd_height = 500 - sdd_margin.top - sdd_margin.bottom;
+      sdd_height = 450 - sdd_margin.top - sdd_margin.bottom;
 
     // append the svg object to the body of the page
     var sdd_svg = d3.select("#graph_interseeded")
