misc word tweaks and links to home page

--- a/kanopy/templates/kanopy/kanopy_display_map.html
+++ b/kanopy/templates/kanopy/kanopy_display_map.html
@@ -150,10 +150,10 @@ https://datadrivensecurity.info/blog/vis/malmaps-d3/
 
             var controlsdiv = L.DomUtil.create('div', 'custom-control');
             controlsdiv.style.width = '250px';
-            controlsdiv.style.height = '450px';
+            controlsdiv.style.height = '500px';
             controlsdiv.style.background = 'white';
             controlsdiv.id = "controls";
-            controlsdiv.innerHTML = '<img width="200" height="100" src="/static/img/MoshStacked_maroon.png"/><br><br><h5>Select property</h5><select id="PropertySelection" class="PropSelector"><option value="fgcc_value">Percent Green Cover</option><option value="gdd">Growing degree days</option></select><div id="legend"><svg width="260px" height="200px"></svg></div><button id="info-button">Info</button><br><button ><a href="{% url 'green_covr_graph' %}">Go to report</button></a>';
+            controlsdiv.innerHTML = '<img width="200" height="100" src="/static/img/MoshStacked_maroon.png"/><br><br><h5>Select property</h5><select id="PropertySelection" class="PropSelector"><option value="fgcc_value">Percent Green Cover</option><option value="gdd">Growing degree days</option></select><div id="legend"><svg width="260px" height="200px"></svg></div><button id="info-button">Info</button><br><a href="{% url 'green_covr_graph' %}">Go to report</a><br><a href="{% url 'kanopy_home' %}">Back to Green Covr home page</a>';
 
 
             $(controlsdiv).mousedown(function () {
@@ -329,7 +329,7 @@ https://datadrivensecurity.info/blog/vis/malmaps-d3/
         var winInfo = L.control.window(map,
             {
                 title: 'MOSH Cover crop growth data project',
-                content: 'Click on data points to view the amount of green cover produced by cover crops. To view other basemaps or toggle the county boundaries, use the menu in the upper righthand counter. See analysis of these data and details about the project at <a href="https://mosh.umn.edu">mosh.umn.edu</a>',
+                content: 'Click on data points to view the amount of green cover produced by cover crops. To view other basemaps or toggle the county boundaries, use the menu in the upper righthand counter. Learn more about the MN Office for Soil Health at <a href="https://mosh.umn.edu">mosh.umn.edu</a>',
                 visible: true
             })
     }
