--- a/kanopy/templates/kanopy/kanopy_references.html
+++ b/kanopy/templates/kanopy/kanopy_references.html
@@ -35,14 +35,16 @@
                     This project was inspired by the work of <a
                         href="https://acsess.onlinelibrary.wiley.com/doi/full/10.2134/agronj15.0150">Patrignani and
                         Ochsner (2015) </a>
-                    and makes use of the <a href="https://fgcc-app.github.io/">code library</a> released by that team.
-                    Default values given by that team were used for the green cover calculation.
+                    with <a href="https://fgcc-app.github.io/">code </a> adapted by <a
+                        href="https://wilsonlab.cfans.umn.edu/">Dr. Melissa Wilson's lab</a> from Patrignani and Oschner
+                    (2015).
+                    Default values given by Patrignani and Oschner (2015) were used for the green cover calculation.
                 </p>
 
 
             </div>
             <div class="card-footer text-muted text-center">
-                Questions? See our <a href="{% url 'green_covr_references' %}">references page</a>
+                <a href="{% url 'kanopy_home' %}">Back to Green Covr home page</a>
             </div>
         </div>
     </div>
