--- a/kanopy/templates/kanopy/kanopy_graph.html
+++ b/kanopy/templates/kanopy/kanopy_graph.html
@@ -217,6 +217,7 @@
     <div class="fluid-row" id="header">
 
       <h1 class="title toc-ignore">Green CovR Summary Data</h1>
+      <h5><a href="{% url 'kanopy_home' %}">Back to Green Covr home page</a></h5>
       <h4 class="date">September, 2022</h4>
       <h5 class="author">Anna Cates, <a href="mailto:catesa@umn.edu">catesa@umn.edu</a></h5>
       <h5 class="author">Marcelle Lewandowski, <a href="mailto:alewand@umn.edu">alewand@umn.edu</a></h5>
