--- a/kanopy/templates/kanopy/kanopy_home.html
+++ b/kanopy/templates/kanopy/kanopy_home.html
@@ -66,9 +66,9 @@
         </p> -->
 
       </div>
-      <!-- <div class="card-footer text-muted text-center">
+      <div class="card-footer text-muted text-center">
         Questions? See our <a href="{% url 'green_covr_references' %}">references page</a>
-      </div> -->
+      </div>
     </div>
   </div>
 </div>
