limiting graph to just 2020 and 2021 planting dates

--- a/kanopy/templates/kanopy/kanopy_graph.html
+++ b/kanopy/templates/kanopy/kanopy_graph.html
@@ -695,6 +695,7 @@
         data[i].properties.cover_crop_planting_date_flat = cov_crop_planting_date
 
       }
+      data = data.filter(function (d) { return d.properties.cover_crop_planting_date == 2020 })
       submission_data = data;
 
 
