--- a/kanopy/templates/kanopy/kanopy_graph.html
+++ b/kanopy/templates/kanopy/kanopy_graph.html
@@ -216,7 +216,7 @@
 
     <div class="fluid-row" id="header">
 
-      <h1 class="title toc-ignore">Green CovR Summary Data</h1>
+      <h1 class="title toc-ignore">Green CovR: Tracking cover crop growth across Minnesota</h1>
       <h5><a href="{% url 'kanopy_home' %}">Back to Green Covr home page</a></h5>
       <h4 class="date">September, 2022</h4>
       <h5 class="author">Anna Cates, <a href="mailto:catesa@umn.edu">catesa@umn.edu</a></h5>
@@ -225,21 +225,23 @@
     </div>
 
     <div id="data-collection" class="section level2">
-      <h2>Data Collection</h2>
-      <p>Between fall 2020 and spring 2022, about 300 photos were submitted from 8 Soil and Water Conservation
-        Districts. East Otter Tail/Wadena, and Faribault each contributed more than 70 photos, Becker and Traverse over
-        30, and 10-20 each from Mower, Olmsted, Pipestone, and Winona. We estimated the % green cover using a <a
-          href="https://wilsonlab.cfans.umn.edu/lab-resources/greencovr-app">photo image analysis</a> which estimates
-        how much of a given photograph is in green. You can see the
-        individual photos by
-        clicking on those points on the <a href="{% url 'green_covr_submission_map' %}">map</a>.</p>
 
-      <p>Below, you can organize the data by planting date, total <a href="{% url 'green_covr_references' %}"> growing
-          degree days</a> (an estimate of how much good crop
+      <p><b>Background:</b> Between fall 2020 and spring 2022, about 300 on-farm photos of cover crops were submitted
+        from eight Soil and Water Conservation Districts. East Otter Tail/Wadena, and Faribault each contributed more
+        than 70 photos, Becker and Traverse over 30, and we received 10-20 each from Mower, Olmsted, Pipestone, and
+        Winona. We estimated the percent green cover using a <a
+          href="https://wilsonlab.cfans.umn.edu/lab-resources/greencovr-app" target="_blank"
+          rel="noopener noreferrer">photo image analysis</a> which estimates
+        how much of a given photograph is green. You can see the individual photos by clicking on the data points on the
+        map. which estimates how much of a given photograph is in green. You can see the individual photos by clicking
+        on those points on the <a href="{% url 'green_covr_submission_map' %}">map</a>.</p>
+
+      <p><b>Data exploration:</b> Below, you can browse the data by planting date, <a
+          href="{% url 'green_covr_references' %}">total growing degree days</a> (an estimate of how much good crop
         growing weather the cover crop experienced), or seeding rate. We'd expect more green cover when planting date is
-        earlier, seeding rate is higher, or there are more growing degree days, but the data don't show this. Although
-        some crops with more time to grow did better, there's a lot of variability we can't explain. This might be due
-        to planting conditions (soil, weather, residue, planting method).
+        earlier, seeding rate is higher, or there are more growing degree days, but the data don't show a clear linear
+        trend. Although some crops with more time to grow did better, there's a lot of variability we can't explain.
+        This might be due to planting conditions (soil, weather, residue) as well as management decisions.
       </p>
       <div class="figure" style="text-align: center">
 
@@ -308,13 +310,13 @@
     </div>
     <div id="effect-of-interseeding" class="section level2">
 
-      <h2>Interseeding</h2>
-      <p>For example, some of the cover crops were interseeded. You can see below that there were successful cover crops
-        with or without interseeding, and that planting date and growing degree days had a stronger effect on % green
-        cover when cover crops weren't interseeded.
 
-        Planting method….
-      </p>
+      <p><b>Interpretations: </b>For example, some of the cover crops were interseeded with a growing cash crop. You can
+        see below that there were successful cover crops with or without interseeding, even though there were fewer
+        growing degree days when cover crops weren't interseeded. Interseeding tends to be a little riskier than
+        post-harvest seeding- 54% of interseeded cover crops had less than 20% green cover, while only 40% of the not
+        interseed cover crops were below that threshold. When cover crops were not interseeded and establishment was
+        more consistent, there's a little bit clearer relationship between growing degree days and green cover.</p>
       <p>
       </p>
       <div class="figure" style="text-align: center">
@@ -393,34 +395,40 @@
 
 
     <div id="effect-of-cover-crop-species" class="section level2">
-      <h2>Effect of cover crop species</h2>
-      <p>The question of cover crop species is a bit complicated, as many of these winter-killed cover crops were mixes
-        of multiple species. We collected up to 4 species included in mixes, but did not include estimates of what the
-        proportion of each species was seeded or emerged. So there's a limit to how much we can say about the effect of
-        species here.
+      <br>
+      <p>You can manipulate the graph above to explore different cover crop species, different prior cash crops, and
+        planting method. For non-interseeded cover crops, drilling produced an average of 45% green cover while all
+        other methods produced less than 30% green cover. Generally, cover crops following corn silage, canning crops,
+        and small grains had higher levels of green cover than corn or soybean in non-interseeded crops. Interseeding
+        increased cover crops' green cover following corn from 20% to 29% on average (especially when incorporated
+        instead of aerial-seeded), while it didn't increase cover crop green cover for other crops as consistently.
       </p>
+      <p>Many of our data points are from mixes of winter-killed and winter-hardy species, and we can not estimate what
+        proportion of each species was seeded or emerged. So unfortunately we're not able to show a clear advantage to
+        any single cover crop species here. It does appear that mixes based on annual ryegrass, legumes, and brassicas,
+        common in interseeding systems, produced only moderate biomass even when they had long growing periods (early
+        planting dates, high growing degree days). Most growers favored mixes based on cereal rye or oats, and these
+        both performed very well across the state.</p>
+      <p>Different cover crops fit different goals and systems. To choose a cover crop, talk to other local farmers,
+        Soil and Water Conservation Districts, or NRCS. For information on different cover crop species, consult the <a
+          href="https://mosh.umn.edu/management/minnesota-cover-crop-research" target="_blank"
+          rel="noopener noreferrer">MN
+          Office for Soil Health Cover Crop Guide</a>, <a href="https://extension.umn.edu/soil-and-water/cover-crops"
+          target="_blank" rel="noopener noreferrer">UMN Extension resources</a> and the <a
+          href="https://www.midwestcovercrops.org/selector-tool/" target="_blank" rel="noopener noreferrer">Midwest
+          Cover Crops Council Selector
+          Tool.</a>
+      </p>
+      <p><b>Photo submission:</b> Data collection is ongoing and open to any potential collaborators, as continuing to
+        build this dataset will help promote cover crop adoption methods with the greatest likelihood for success. We're
+        looking for photos taken from chest height of cover crops at their greatest point of growth- so right before
+        frost, for winter-killed crops, and right before spring termination, for winter hardy crops. By submitting
+        images year-after-year, you will learn more about what impacts cover crop growth in your county. If you think
+        you'd like to submit a photo, visit our <a href="{% url 'kanopy_upload' %}">submission portal</a> to see what
+        other information you'll need to have ready. Thank you for your contributions!</p>
 
     </div>
-    <div id="effect-of-prior-crop" class="section level2">
-      <h2>Effect of Prior Crop</h2>
-      <p>The crop previous to the cover crop is obviously what determines planting date to a large extent. Below you
-        can
-        see confirmation of our expectations that early harvested crops like small grains, canning crops, and dry
-        beans
-        tend to allow for more cover crop growth.</p>
-      <p></p>
-    </div>
-    <div id="next-steps" class="section level2">
-      <h2>Next Steps</h2>
-      <p>I expect to see at least 100 more photos in spring 2020. At that point, maybe we'll see the relationship
-        between planting date and coverage strengthen for the overwintering species like cereal rye. Since most of the
-        winter-killed species are planted early in the season, the exact timing might be less critical for the species
-        represented in this preliminary data set. With more data, we may also be able to establish a threshold for
-        this
-        application to evaluate qualitative success of cover crops, for example, &lt;10% ground cover =
-        &quot;Unsuccessful&quot;, 10-30% ground cover = &quot;Moderate success&quot;, 30-55% ground cover = &quot;Good
-        success&quot;, and &gt;55% = &quot;Excellent establishment&quot;.</p>
-    </div>
+
 
 
 
