minor text edits and formatting changes

--- a/kanopy/templates/kanopy/kanopy_graph.html
+++ b/kanopy/templates/kanopy/kanopy_graph.html
@@ -216,11 +216,11 @@
 
     <div class="fluid-row" id="header">
 
-      <h1 class="title toc-ignore">Green CovR: Tracking cover crop growth across Minnesota</h1>
-      <h5><a href="{% url 'kanopy_home' %}">Back to Green Covr home page</a></h5>
-      <h4 class="date">September, 2022</h4>
-      <h5 class="author">Anna Cates, <a href="mailto:catesa@umn.edu">catesa@umn.edu</a></h5>
-      <h5 class="author">Marcelle Lewandowski, <a href="mailto:alewand@umn.edu">alewand@umn.edu</a></h5>
+      <h2 class="title toc-ignore">Green CovR: Tracking cover crop growth across Minnesota</h1>
+        <h5><a href="{% url 'kanopy_home' %}">Back to Green Covr home page</a></h5>
+        <h4 class="date">September, 2022</h4>
+        <h5 class="author">Anna Cates, <a href="mailto:catesa@umn.edu">catesa@umn.edu</a></h5>
+        <h5 class="author">Marcelle Lewandowski, <a href="mailto:alewand@umn.edu">alewand@umn.edu</a></h5>
 
     </div>
 
@@ -232,8 +232,7 @@
         Winona. We estimated the percent green cover using a <a
           href="https://wilsonlab.cfans.umn.edu/lab-resources/greencovr-app" target="_blank"
           rel="noopener noreferrer">photo image analysis</a> which estimates
-        how much of a given photograph is green. You can see the individual photos by clicking on the data points on the
-        map. which estimates how much of a given photograph is in green. You can see the individual photos by clicking
+        how much of a given photograph is green. You can see the individual photos by clicking
         on those points on the <a href="{% url 'green_covr_submission_map' %}">map</a>.</p>
 
       <p><b>Data exploration:</b> Below, you can browse the data by planting date, <a
@@ -311,10 +310,10 @@
     <div id="effect-of-interseeding" class="section level2">
 
 
-      <p><b>Interpretations: </b>For example, some of the cover crops were interseeded with a growing cash crop. You can
+      <p><b>Interpretations: </b>Some of the cover crops were interseeded with a growing cash crop. You can
         see below that there were successful cover crops with or without interseeding, even though there were fewer
         growing degree days when cover crops weren't interseeded. Interseeding tends to be a little riskier than
-        post-harvest seeding- 54% of interseeded cover crops had less than 20% green cover, while only 40% of the not
+        post-harvest seeding: 54% of interseeded cover crops had less than 20% green cover, while only 40% of the not
         interseed cover crops were below that threshold. When cover crops were not interseeded and establishment was
         more consistent, there's a little bit clearer relationship between growing degree days and green cover.</p>
       <p>
@@ -405,8 +404,8 @@
       </p>
       <p>Many of our data points are from mixes of winter-killed and winter-hardy species, and we can not estimate what
         proportion of each species was seeded or emerged. So unfortunately we're not able to show a clear advantage to
-        any single cover crop species here. It does appear that mixes based on annual ryegrass, legumes, and brassicas,
-        common in interseeding systems, produced only moderate biomass even when they had long growing periods (early
+        any single cover crop species here. It does appear that mixes based on annual ryegrass, legumes, and brassicas -
+        common in interseeding systems - produced only moderate biomass even when they had long growing periods (early
         planting dates, high growing degree days). Most growers favored mixes based on cereal rye or oats, and these
         both performed very well across the state.</p>
       <p>Different cover crops fit different goals and systems. To choose a cover crop, talk to other local farmers,
