adding mosh link

--- a/kanopy/templates/kanopy/kanopy_graph.html
+++ b/kanopy/templates/kanopy/kanopy_graph.html
@@ -218,6 +218,8 @@
 
       <h2 class="title toc-ignore">Green CovR: Tracking cover crop growth across Minnesota</h1>
         <h5><a href="{% url 'kanopy_home' %}">Back to Green Covr home page</a></h5>
+        <h5><a href="https://mosh.umn.edu" target="_blank" rel="noopener noreferrer">Minnesota Office for Soil
+            Health</a></h5>
         <h4 class="date">September, 2022</h4>
         <h5 class="author">Anna Cates, <a href="mailto:catesa@umn.edu">catesa@umn.edu</a></h5>
         <h5 class="author">Marcelle Lewandowski, <a href="mailto:alewand@umn.edu">alewand@umn.edu</a></h5>
