--- a/templates/password_reset_email.html
+++ b/templates/password_reset_email.html
@@ -1,10 +1,10 @@
-Hi there,
+Hello,
 
 Someone asked for a password reset for the email address {{ email }}.
 Follow the link below:
 {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
 
-In case you forgot your Django Boards username: {{ user.username }}
+Your evansgeospatial.com username is: {{ user.username }}
 
 If clicking the link above doesn't work, please copy and paste the URL
 in a new browser window instead.
@@ -16,4 +16,4 @@ disregard this email.
 
 Thanks,
 
-The Django Boards Team
+Evans Geospatial
